--- a/src/pages/reference-js/overview.mdx
+++ b/src/pages/reference-js/overview.mdx
@@ -37,8 +37,8 @@ interface Resources {
 
 Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
 
-- When there is an active session, `user === session.user`**.**When there is no active session, `user`and `session`will both be **null**.
-- When a session is loading, `user`and `session`will be **undefined**.
+*   When there is an active session, `user === session.user`\*\*.\*\*When there is no active session, `user`and `session`will both be **null**.
+*   When a session is loading, `user`and `session`will be **undefined**.
 
 **Parameters**
 
@@ -164,7 +164,7 @@ Take a look at the function parameters description below for more usage details.
 
 **Returns**
 Type | Description |
------------------------------- | ------------------------------------------------------- |
+\------------------------------ | ------------------------------------------------------- |
 | MagicLinkError | This method will throw a MagicLinkError if the magic link verification failed or the link expired. Check the error's code property for details. |
 
 ### isReady()[](https://clerk.com/docs/reference/clerkjs/clerk#is-ready)
@@ -179,7 +179,7 @@ This method accepts no parameters.
 
 **Returns**
 Type | Description |
------------------------------- | ------------------------------------------------------- |
+\------------------------------ | ------------------------------------------------------- |
 boolean | This method will return true when the Clerk object is ready, false otherwise. |
 
 ### load(options?)[](https://clerk.com/docs/reference/clerkjs/clerk#load-options)
@@ -198,7 +198,7 @@ It is absolutely necessary to call this method before using the `Clerk` object
 
 **Returns**
 Type | Description |
------------------------------- | ------------------------------------------------------- |
+\------------------------------ | ------------------------------------------------------- |
 | boolean | This method will return **true** when the `Clerk` object is ready, **false** otherwise. |
 
 ### mountSignIn(node, nodeProps?)[](https://clerk.com/docs/reference/clerkjs/clerk#mount-sign-in-node-node-props)
