--- a/src/pages/reference-react/authentication/user-button.mdx
+++ b/src/pages/reference-react/authentication/user-button.mdx
@@ -5,214 +5,214 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<UserButton />`
 
----
+***
 
-<Images
-  width={496}
-  height={564}
-  src="/images/ui-components/component-user_button.svg"
-  alt="User Button Example"
-/>
+<Images width={496} height={564} src="/images/ui-components/component-user_button.svg" alt="User Button Example" />
 
 The `<UserButton/>` component is used to render the familiar user button UI popularized by Google.
 
 ## Usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="userButtonExample.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  SignInButton,
-  UserButton,
-} from "@clerk/nextjs";
+  ```jsx copy filename="userButtonExample.tsx"
+  import {
+    ClerkProvider,
+    SignedIn,
+    SignedOut,
+    SignInButton,
+    UserButton,
+  } from "@clerk/nextjs";
 
-function Header() {
-return (
-    <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
-      <h1>My App</h1>
-      <SignedIn>
-        {/* Mount the UserButton component */}
-        <UserButton />
-      </SignedIn>
-      <SignedOut>
-        {/* Signed out users get sign in button */}
-        <SignInButton />
-      </SignedOut>
-    </header>
-);
-}
-
-function MyApp({ pageProps }) {
+  function Header() {
   return (
-    <ClerkProvider {...pageProps}>
-      <Header />
-    </ClerkProvider>
+      <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
+        <h1>My App</h1>
+        <SignedIn>
+          {/* Mount the UserButton component */}
+          <UserButton />
+        </SignedIn>
+        <SignedOut>
+          {/* Signed out users get sign in button */}
+          <SignInButton />
+        </SignedOut>
+      </header>
   );
-}
+  }
 
-export default MyApp;
-```
-```tsx filename="app.tsx" copy
-import {
-   ClerkProvider,
-   SignedIn,
-   SignIn,
-   SignUp,
-   UserButton,
-} from "@clerk/clerk-react";
-import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
-
-const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function PublicPage() {
+  function MyApp({ pageProps }) {
     return (
-      <>
-        <h1>Public page</h1>
-        <a href="/protected">Go to protected page</a>
-      </>
-    );
-}
-
-function ProtectedPage() {
-  return (
-      <>
-        <h1>Protected page</h1>
-        <UserButton />
-      </>
-    );
-}
-
-function ClerkProviderWithRoutes() {
-  const navigate = useNavigate();
-
-  return (
-    <ClerkProvider
-      publishableKey={clerk_pub_key}
-      navigate={(to) => navigate(to)}>
-        <Routes>
-          <Route path="/" element={<PublicPage />} />
-          <Route
-          path="/sign-in/*"
-          element={<SignIn routing="path" path="/sign-in" />}
-          />
-          <Route
-          path="/sign-up/*"
-          element={<SignUp routing="path" path="/sign-up" />}
-          />
-          <Route
-            path="/protected"
-            element={
-              <SignedIn>
-                <ProtectedPage />
-              </SignedIn>
-            }
-          />
-        </Routes>
+      <ClerkProvider {...pageProps}>
+        <Header />
       </ClerkProvider>
     );
-}
-
-function App() {
-  return (
-    <BrowserRouter>
-      <ClerkProviderWithRoutes />
-    </BrowserRouter>
-  );
-}
-
-```
-```tsx filename="router/index.tsx" copy
-import {
-  UserButton,
-} from "@clerk/remix";
-import { getAuth } from "@clerk/remix/ssr.server";
-import { LoaderFunction, redirect } from "@remix-run/node";
-
-export const loader: LoaderFunction = async (args) => {
-  const { userId } = await getAuth(args);
-  if(!userId){
-    return redirect("/sign-in");
   }
-  return {};
-}
 
-export default function Index() {
-  return (
-    <div>
-        <h1>Index route</h1>
-        <p>You are signed in!</p>
-        <UserButton afterSignOutUrl="/"/>
-    </div>
-  );
-}
-```
+  export default MyApp;
+  ```
+
+  ```tsx filename="app.tsx" copy
+  import {
+     ClerkProvider,
+     SignedIn,
+     SignIn,
+     SignUp,
+     UserButton,
+  } from "@clerk/clerk-react";
+  import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
+
+  const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function PublicPage() {
+      return (
+        <>
+          <h1>Public page</h1>
+          <a href="/protected">Go to protected page</a>
+        </>
+      );
+  }
+
+  function ProtectedPage() {
+    return (
+        <>
+          <h1>Protected page</h1>
+          <UserButton />
+        </>
+      );
+  }
+
+  function ClerkProviderWithRoutes() {
+    const navigate = useNavigate();
+
+    return (
+      <ClerkProvider
+        publishableKey={clerk_pub_key}
+        navigate={(to) => navigate(to)}>
+          <Routes>
+            <Route path="/" element={<PublicPage />} />
+            <Route
+            path="/sign-in/*"
+            element={<SignIn routing="path" path="/sign-in" />}
+            />
+            <Route
+            path="/sign-up/*"
+            element={<SignUp routing="path" path="/sign-up" />}
+            />
+            <Route
+              path="/protected"
+              element={
+                <SignedIn>
+                  <ProtectedPage />
+                </SignedIn>
+              }
+            />
+          </Routes>
+        </ClerkProvider>
+      );
+  }
+
+  function App() {
+    return (
+      <BrowserRouter>
+        <ClerkProviderWithRoutes />
+      </BrowserRouter>
+    );
+  }
+
+  ```
+
+  ```tsx filename="router/index.tsx" copy
+  import {
+    UserButton,
+  } from "@clerk/remix";
+  import { getAuth } from "@clerk/remix/ssr.server";
+  import { LoaderFunction, redirect } from "@remix-run/node";
+
+  export const loader: LoaderFunction = async (args) => {
+    const { userId } = await getAuth(args);
+    if(!userId){
+      return redirect("/sign-in");
+    }
+    return {};
+  }
+
+  export default function Index() {
+    return (
+      <div>
+          <h1>Index route</h1>
+          <p>You are signed in!</p>
+          <UserButton afterSignOutUrl="/"/>
+      </div>
+    );
+  }
+  ```
 </CodeBlockTabs>
+
 ## Props
 
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
-    {
-      cells: ["appearance", "object", `Controls the overall look and feel.`],
-    },
-    {
-      cells: [
-        "showName",
-        "string",
-        `Controls if the user name is displayed next to the user image button.`,
-      ],
-    },
-    {
-      cells: [
-        "signInUrl",
-        "string",
-        `The full URL or path to navigate to when the "Add another account" button is clicked.`,
-      ],
-    },
-    {
-      cells: [
-        "userProfileMode",
-        `"modal" | "navigation"`,
-        `Controls whether clicking the "Manage your account" button will cause the UserProfile component to open as a modal, or if the browser will navigate to the userProfileUrl where UserProfile is mounted as a page.`,
-      ],
-    },
-    {
-      cells: [
-        "userProfileUrl",
-        `string`,
-        `The full URL or path leading to the user management interface.`,
-      ],
-    },
-    {
-      cells: [
-        "afterSignOutUrl",
-        "string",
-        "The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)",
-      ],
-    },
-    {
-      cells: [
-        "afterMultiSessionSingleSignOutUrl",
-        "string",
-        "The full URL or path to navigate to after a signing out from currently active account (multisession apps).",
-      ],
-    },
-    {
-      cells: [
-        "afterSwitchSessionUrl",
-        "string",
-        "Full URL or path to navigate to after a successful account change (multi-session apps).",
-      ],
-    },
-    {
-      cells: [
-        "defaultOpen",
-        "string",
-        "Controls whether the <UserButton/> should open by default during the first render.",
-      ],
-    },
+  {
+  cells: ["appearance", "object", `Controls the overall look and feel.`],
+  },
+  {
+  cells: [
+  "showName",
+  "string",
+  `Controls if the user name is displayed next to the user image button.`,
+  ],
+  },
+  {
+  cells: [
+  "signInUrl",
+  "string",
+  `The full URL or path to navigate to when the "Add another account" button is clicked.`,
+  ],
+  },
+  {
+  cells: [
+  "userProfileMode",
+  `"modal" | "navigation"`,
+  `Controls whether clicking the "Manage your account" button will cause the UserProfile component to open as a modal, or if the browser will navigate to the userProfileUrl where UserProfile is mounted as a page.`,
+  ],
+  },
+  {
+  cells: [
+  "userProfileUrl",
+  `string`,
+  `The full URL or path leading to the user management interface.`,
+  ],
+  },
+  {
+  cells: [
+  "afterSignOutUrl",
+  "string",
+  "The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)",
+  ],
+  },
+  {
+  cells: [
+  "afterMultiSessionSingleSignOutUrl",
+  "string",
+  "The full URL or path to navigate to after a signing out from currently active account (multisession apps).",
+  ],
+  },
+  {
+  cells: [
+  "afterSwitchSessionUrl",
+  "string",
+  "Full URL or path to navigate to after a successful account change (multi-session apps).",
+  ],
+  },
+  {
+  cells: [
+  "defaultOpen",
+  "string",
+  "Controls whether the <UserButton/> should open by default during the first render.",
+  ],
+  },
   ]}
 />
+
+```
 ```
