--- a/src/pages/reference-react/customization/appearance.mdx
+++ b/src/pages/reference-react/customization/appearance.mdx
@@ -5,7 +5,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Appearance prop
 
----
+***
 
 The appearance prop can be applied to `<ClerkProvider/>` to share styles across every component, or individually to any of the Clerk components.
 
@@ -15,17 +15,19 @@ We offer a set of themes that can be used with the `appearance` prop. The themes
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
-  ``` bash filename="your-project" copy
-  npm install @clerk/themes
-  ```
+    ```bash filename="your-project" copy
+    npm install @clerk/themes
+    ```
   </Tab>
+
   <Tab>
-  ``` bash filename="your-project" copy
-  yarn add @clerk/themes
-  ```
+    ```bash filename="your-project" copy
+    yarn add @clerk/themes
+    ```
   </Tab>
+
   <Tab>
-    ``` bash filename="your-project" copy
+    ```bash filename="your-project" copy
      pnpm install @clerk/themes
     ```
   </Tab>
@@ -34,97 +36,99 @@ We offer a set of themes that can be used with the `appearance` prop. The themes
 #### Usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```tsx filename="app.tsx" copy
-import { dark } from '@clerk/themes';
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import type { AppProps } from "next/app";
+  ```tsx filename="app.tsx" copy
+  import { dark } from '@clerk/themes';
+  import { ClerkProvider, SignIn } from '@clerk/nextjs';
+  import type { AppProps } from "next/app";
 
-function MyApp({ pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
+  function MyApp({ Component, pageProps }: AppProps) {
+    return (
+      <ClerkProvider
+        appearance={{
+          baseTheme: dark
+        }}
+      >
+        <Component {...pageProps}/>
+      </ClerkProvider>
+    )
+  }
+
+  export default MyApp;
+  ```
+
+  ```tsx filename="app.tsx" copy
+  import React from "react";
+  import "./App.css";
+  import { dark } from '@clerk/themes';
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider appearance={{
         baseTheme: dark
-      }}
-    >
-      <Component {...pageProps}>
-    </ClerkProvider>
-  )
-}
+        }} publishableKey={clerkPubKey}>
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
 
-export default MyApp;
-```
-```tsx filename="app.tsx" copy
-import React from "react";
-import "./App.css";
-import { dark } from '@clerk/themes';
-import { ClerkProvider } from "@clerk/clerk-react";
+  export default App;
+  ```
 
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+  ```tsx filename="app/root.tsx"
+  import { ClerkApp } from "@clerk/remix";
+  import { dark } from '@clerk/themes';
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
 
-function App() {
-  return (
-    <ClerkProvider appearance={{
-      baseTheme: dark
-      }} publishableKey={clerkPubKey}>
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
 
-export default App;
-```
-```tsx filename="app/root.tsx"
-import { ClerkApp } from "@clerk/remix";
-import { dark } from '@clerk/themes';
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
 
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
 
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
 
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
+  function App() {
+    return (
+      <html lang="en">
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
+      </html>
+    );
+  }
 
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    baseTheme: dark,
-  },
-});
-````
+  export default ClerkApp(App, {
+    appearance: {
+      baseTheme: dark,
+    },
+  });
+  ```
 </CodeBlockTabs>
 
 ## Layout
@@ -137,7 +141,7 @@ The layout key can be used to change the layout of the `<SignIn/>` and `<SignUp/
 import { ClerkProvider, SignIn } from '@clerk/nextjs';
 import type { AppProps } from "next/app";
 
-function MyApp({ pageProps }: AppProps) {
+function MyApp({ Component, pageProps }: AppProps) {
   return (
     <ClerkProvider
       appearance={
@@ -155,7 +159,7 @@ function MyApp({ pageProps }: AppProps) {
         }
       }
     >
-       <Component {...pageProps}>
+       <Component {...pageProps}/>
     </ClerkProvider>
   )
 }
@@ -168,46 +172,46 @@ export default MyApp;
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
-    {
-      cells: ["helpPageUrl", "string", "The URL to your help page"],
-    },
-    {
-      cells: ["logoImageUrl", "string", "The URL to your logo image"],
-    },
-    {
-      cells: [
-        "logoPlacement",
-        "string",
-        "The placement of your logo. \n The options are: \n - `inside` \n - `outside`",
-      ],
-    },
-    {
-      cells: ["privacyPageUrl", "string", "The URL to your privacy page"],
-    },
-    {
-      cells: [
-        "showOptionalFields",
-        "boolean",
-        "Whether to show optional fields on sign up.",
-      ],
-    },
-    {
-      cells: [
-        "socialButtonsPlacement",
-        "string",
-        "The placement of your social buttons. \n The options are: \n -`bottom` \n - `top`",
-      ],
-    },
-    {
-      cells: [
-        "socialButtonsVariant",
-        "string",
-        "The variant of your social buttons. \n The options are: \n - `blockButton` \n - `textButton` \n - `auto`",
-      ],
-    },
-    {
-      cells: ["termsPageUrl", "string", "The URL to your terms page"],
-    },
+  {
+  cells: ["helpPageUrl", "string", "The URL to your help page"],
+  },
+  {
+  cells: ["logoImageUrl", "string", "The URL to your logo image"],
+  },
+  {
+  cells: [
+  "logoPlacement",
+  "string",
+  "The placement of your logo. \n The options are: \n - `inside` \n - `outside`",
+  ],
+  },
+  {
+  cells: ["privacyPageUrl", "string", "The URL to your privacy page"],
+  },
+  {
+  cells: [
+  "showOptionalFields",
+  "boolean",
+  "Whether to show optional fields on sign up.",
+  ],
+  },
+  {
+  cells: [
+  "socialButtonsPlacement",
+  "string",
+  "The placement of your social buttons. \n The options are: \n -`bottom` \n - `top`",
+  ],
+  },
+  {
+  cells: [
+  "socialButtonsVariant",
+  "string",
+  "The variant of your social buttons. \n The options are: \n - `blockButton` \n - `textButton` \n - `auto`",
+  ],
+  },
+  {
+  cells: ["termsPageUrl", "string", "The URL to your terms page"],
+  },
   ]}
 />
 
@@ -221,7 +225,7 @@ The variables property is used to adjust the general styles of the base theme, l
 import { ClerkProvider, SignIn } from '@clerk/nextjs';
 import type { AppProps } from "next/app";
 
-function MyApp({ pageProps }: AppProps) {
+function MyApp({ Component, pageProps }: AppProps) {
   return (
     <ClerkProvider {...pageProps} appearance={
       {
@@ -231,7 +235,7 @@ function MyApp({ pageProps }: AppProps) {
         }
       }
     }>
-        <Component {...pageProps}>
+        <Component {...pageProps}/>
     </ClerkProvider>
   )
 }
@@ -244,80 +248,80 @@ export default MyApp;
 <Tables
   headings={["Name", "Description"]}
   rows={[
-    {
-      cells: [
-        "colorPrimary",
-        "The primary color used throughout the components",
-      ],
-    },
-    { cells: ["colorDanger", "The color used for error states"] },
-    { cells: ["colorSuccess", "The color used for success states"] },
-    { cells: ["colorWarning", "The color used for warning states"] },
-    {
-      cells: [
-        "colorAlphaShaded",
-        "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
-      ],
-    },
-    {
-      cells: [
-        "colorTextOnPrimaryBackground",
-        "The color used for text on the primary background",
-      ],
-    },
-    { cells: ["colorTextSecondary", "The color used for secondary text"] },
-    {
-      cells: ["colorBackground", "The background color for the card container"],
-    },
-    { cells: ["colorInputText", "The color used for text in input fields"] },
-    {
-      cells: [
-        "colorInputBackground",
-        "The background color used for input fields",
-      ],
-    },
-    {
-      cells: [
-        "fontFamily",
-        "The font family used throughout the components, by default we inherit the font family",
-      ],
-    },
-    {
-      cells: [
-        "fontFamilyButtons",
-        "The font family used for buttons, by default we inherit the font family",
-      ],
-    },
-    {
-      cells: [
-        "fontSize",
-        "The font size used throughout the components, by default this is set to 1rem",
-      ],
-    },
-    {
-      cells: [
-        "fontSmoothing",
-        "The font smoothing used throughout the components, by default this is set to auto",
-      ],
-    },
-    {
-      cells: [
-        "fontWeight",
-        "The font weight used throughout the components, by default this is set to {normal: 400, medium: 500, bold: 600}",
-      ],
-    },
-    {
-      cells: [
-        "borderRadius",
-        "The border radius used throughout the components, by default this is set to 0.375rem",
-      ],
-    },
-    {
-      cells: [
-        "spacingUnit",
-        "The spacing unit used throughout the components, by default this is set to 1rem",
-      ],
-    },
+  {
+  cells: [
+  "colorPrimary",
+  "The primary color used throughout the components",
+  ],
+  },
+  { cells: ["colorDanger", "The color used for error states"] },
+  { cells: ["colorSuccess", "The color used for success states"] },
+  { cells: ["colorWarning", "The color used for warning states"] },
+  {
+  cells: [
+  "colorAlphaShaded",
+  "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
+  ],
+  },
+  {
+  cells: [
+  "colorTextOnPrimaryBackground",
+  "The color used for text on the primary background",
+  ],
+  },
+  { cells: ["colorTextSecondary", "The color used for secondary text"] },
+  {
+  cells: ["colorBackground", "The background color for the card container"],
+  },
+  { cells: ["colorInputText", "The color used for text in input fields"] },
+  {
+  cells: [
+  "colorInputBackground",
+  "The background color used for input fields",
+  ],
+  },
+  {
+  cells: [
+  "fontFamily",
+  "The font family used throughout the components, by default we inherit the font family",
+  ],
+  },
+  {
+  cells: [
+  "fontFamilyButtons",
+  "The font family used for buttons, by default we inherit the font family",
+  ],
+  },
+  {
+  cells: [
+  "fontSize",
+  "The font size used throughout the components, by default this is set to 1rem",
+  ],
+  },
+  {
+  cells: [
+  "fontSmoothing",
+  "The font smoothing used throughout the components, by default this is set to auto",
+  ],
+  },
+  {
+  cells: [
+  "fontWeight",
+  "The font weight used throughout the components, by default this is set to {normal: 400, medium: 500, bold: 600}",
+  ],
+  },
+  {
+  cells: [
+  "borderRadius",
+  "The border radius used throughout the components, by default this is set to 0.375rem",
+  ],
+  },
+  {
+  cells: [
+  "spacingUnit",
+  "The spacing unit used throughout the components, by default this is set to 1rem",
+  ],
+  },
   ]}
 />
 
@@ -333,7 +337,7 @@ An example would be: `cl-formButtonPrimary` which targets the primary buttons in
 import { ClerkProvider, SignIn } from '@clerk/nextjs';
 import type { AppProps } from "next/app";
 
-function MyApp({ pageProps }: AppProps) {
+function MyApp({ Component, pageProps }: AppProps) {
   return (
     <ClerkProvider {...pageProps} appearance={
       {
@@ -344,7 +348,7 @@ function MyApp({ pageProps }: AppProps) {
         }
       }
     }>
-        <Component {...pageProps}>
+        <Component {...pageProps}/>
     </ClerkProvider>
   )
 }
@@ -356,10 +360,10 @@ export default MyApp;
 
 Currently Clerk components can be used with the following styling methods:
 
-- CSS Modules
-- Tailwind CSS
-- Inline CSS Objects
-- Global CSS / CSS libraries
+*   CSS Modules
+*   Tailwind CSS
+*   Inline CSS Objects
+*   Global CSS / CSS libraries
 
 ### CSS Modules
 
