--- a/src/pages/reference-react/customization/localization.mdx
+++ b/src/pages/reference-react/customization/localization.mdx
@@ -9,28 +9,30 @@ Clerk offers the ability to override the strings for all of the elements in each
 
 The `@clerk/localizations` package contains predefined localizations for the Clerk Components. We currently support:
 
-- frFR for fr-FR
-- deDE for de-DE
-- esES for es-ES
-- itIT for it-IT
-- ptBR for pt-BR
-- enUS for en-US (default)
+*   frFR for fr-FR
+*   deDE for de-DE
+*   esES for es-ES
+*   itIT for it-IT
+*   ptBR for pt-BR
+*   enUS for en-US (default)
 
 ### Usage
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
-    ``` bash filename="your-project" copy
+    ```bash filename="your-project" copy
     npm install @clerk/localizations
     ```
   </Tab>
+
   <Tab>
-    ``` bash filename="your-project" copy
+    ```bash filename="your-project" copy
     yarn add @clerk/localizations
     ```
   </Tab>
+
   <Tab>
-    ``` bash filename="your-project" copy
+    ```bash filename="your-project" copy
     pnpm install @clerk/localizations
     ```
   </Tab>
