--- a/src/pages/reference-react/user-management/clerk-loaded.mdx
+++ b/src/pages/reference-react/user-management/clerk-loaded.mdx
@@ -3,7 +3,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<ClerkLoaded>`
 
----
+----
 
 The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`, this allows you to wrap child components to access the Clerk object without the need to check it exists.
 
@@ -11,7 +11,7 @@ The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and wi
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
-```jsx copy filename="pages/_app.tsx"
+```tsx copy filename="pages/_app.tsx"
 import "@/styles/globals.css";
 import { ClerkLoaded, ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
@@ -31,7 +31,7 @@ export default MyApp;
 
 Once you have wrapped your app with `<ClerkLoaded>` you can access the Clerk object without the need to check if it exists.
 
-```jsx copy filename="pages/index.tsx"
+```tsx copy filename="pages/index.tsx"
 declare global {
   interface Window {
     Clerk: any;
@@ -47,7 +47,7 @@ export default function Home() {
 
 </Tab>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
 
