--- a/src/pages/reference-react/user-management/clerk-loading.mdx
+++ b/src/pages/reference-react/user-management/clerk-loading.mdx
@@ -9,22 +9,22 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
-```jsx copy filename="pages/_app.tsx"
+```tsx copy filename="pages/_app.tsx"
 import "@/styles/globals.css";
-import { ClerkLoaded, ClerkLoading,ClerkProvider } from "@clerk/nextjs";
+import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
 
 function MyApp({ Component, pageProps }: AppProps) {
-return (
-  <ClerkProvider {...pageProps}>
-    <ClerkLoading>
-      <div>Clerk is loading</div>
-    </ClerkLoading>
-    <ClerkLoaded>
-      <Component {...pageProps} />
-    </ClerkLoaded>
-  </ClerkProvider>
-);
+  return (
+    <ClerkProvider {...pageProps}>
+      <ClerkLoading>
+        <div>Clerk is loading</div>
+      </ClerkLoading>
+      <ClerkLoaded>
+        <Component {...pageProps} />
+      </ClerkLoaded>
+    </ClerkProvider>
+  );
 }
 
 export default MyApp;
@@ -32,7 +32,7 @@ export default MyApp;
 </Tab>
 <Tab>
 
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
 
 function App() {
