--- a/src/pages/reference-react/user-management/multi-session.mdx
+++ b/src/pages/reference-react/user-management/multi-session.mdx
@@ -11,7 +11,7 @@ The `<MultisessionAppSupport>` provides a wrapper for your React application tha
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
-```jsx copy filename="pages/_app.tsx"
+```tsx copy filename="pages/_app.tsx"
 import "@/styles/globals.css";
 import { MultisessionAppSupport,ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
@@ -30,7 +30,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
 
 function App() {
