--- a/src/pages/quickstarts/frontend/react.mdx
+++ b/src/pages/quickstarts/frontend/react.mdx
@@ -14,13 +14,15 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ``` bash filename="your-project" copy
+  ```bash filename="your-project" copy
   npm install @clerk/clerk-react
   ```
-   ``` bash filename="your-project" copy
-   yarn add @clerk/clerk-react
-   ```
-  ``` bash filename="your-project" copy
+
+  ```bash filename="your-project" copy
+  yarn add @clerk/clerk-react
+  ```
+
+  ```bash filename="your-project" copy
   pnpm i @clerk/clerk-react
   ```
 </CodeBlockTabs>
@@ -238,23 +240,10 @@ Now you have an application integrated with Clerk you will want to read the foll
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards
-      title="Customization & Localization"
-      description="Learn how to customize and localize the Clerk components."
-      link="/components/customization/appearance"
-      cta="Learn More"
-    />
-    <Cards
-      title="Authentication Components"
-      description="Learn more about all our authentication components."
-      link="/components/authentication/sign-in"
-      cta="Learn More"
-    />
-    <Cards
-      title="Client Side Helpers"
-      description="Learn more about our client side helpers and how to use them."
-      link="/sdk/shared/use-auth"
-      cta="Learn More"
-    />
-   </div>
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/components/customization/appearance" cta="Learn More" />
+
+    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/components/authentication/sign-in" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/sdk/shared/use-auth" cta="Learn More" />
+  </div>
 </div>
