--- a/src/pages/quickstarts/full-stack/remix.mdx
+++ b/src/pages/quickstarts/full-stack/remix.mdx
@@ -14,16 +14,19 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a Remix application ready, you need to install Clerk's Remix SDK. This gives you access to our prebuilt components and hooks for Remix applications.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ``` bash filename="your-project" copy
+  ```bash filename="your-project" copy
   npm install @clerk/remix
   ```
-   ``` bash filename="your-project" copy
-   yarn add @clerk/remix
-   ```
-  ``` bash filename="your-project" copy
+
+  ```bash filename="your-project" copy
+  yarn add @clerk/remix
+  ```
+
+  ```bash filename="your-project" copy
   pnpm i @clerk/remix
   ```
 </CodeBlockTabs>
+
 ## Set Environment Keys
 
 Below is an example of your .env file. To get the respective keys go to the API Keys page in the Clerk dashboard.
@@ -141,14 +144,14 @@ function App() {
 
 // Wrap your app in ClerkApp(app)
 export default ClerkApp(App);
-````
+```
 
 ### Set ClerkCatchBoundary
 
 Clerk uses short lived tokens to keep your application secure, to refresh expired tokens Clerk uses Remix's catch boundary.
 
 <Callout type="info">
-If you are seeing a 401 after a short period of time even though your user is logged in. Please verify you have implemented this section.
+  If you are seeing a 401 after a short period of time even though your user is logged in. Please verify you have implemented this section.
 </Callout>
 
 ```tsx filename="app/root.tsx" copy
@@ -243,12 +246,7 @@ export default function SignInPage() {
 
 To make sure you are using the embedded components you will need to update your instance settings in the [Clerk Dashboard](https://dashboard.clerk.dev) to use the embedded components.
 
-<Images
-  src="/images/common/path-setting.png"
-  width={1344}
-  height={523}
-  alt="Path setting Imagee"
-/>
+<Images src="/images/common/path-setting.png" width={1344} height={523} alt="Path setting Imagee" />
 
 <Callout type="info" emoji="ℹ️">
   By default, the Clerk components inherit the font family.
@@ -360,6 +358,7 @@ export default function Example() {
   return <div>Hello, {user.firstName} welcome to Clerk</div>;
 }
 ```
+
 ## Server Side
 
 ### SSR
@@ -367,6 +366,7 @@ export default function Example() {
 #### getAuth()
 
 Using getAuth allows you to retrieve auth state and also ways to fetch data using the `getToken` function.
+
 ```tsx filename="routes/example.tsx" copy
 export const loader: LoaderFunction = async (args) => {
   // Using getAuth to retrieve data as needed.
@@ -404,23 +404,10 @@ Now you have an application integrated with Clerk you will want to read the foll
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards
-      title="Customization & Localization"
-      description="Learn how to customize and localize the Clerk components."
-      link="/components/customization/appearance"
-      cta="Learn More"
-    />
-    <Cards
-      title="Authentication Components"
-      description="Learn more about all our authentication components."
-      link="/components/authentication/sign-in"
-      cta="Learn More"
-    />
-    <Cards
-      title="Client Side Helpers"
-      description="Learn more about our client side helpers and how to use them."
-      link="/sdk/shared/use-auth"
-      cta="Learn More"
-    />
-   </div>
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/components/customization/appearance" cta="Learn More" />
+
+    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/components/authentication/sign-in" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/sdk/shared/use-auth" cta="Learn More" />
+  </div>
 </div>
