--- a/src/pages/reference-react/internals/use-session-list.mdx
+++ b/src/pages/reference-react/internals/use-session-list.mdx
@@ -15,14 +15,14 @@ import { useSessionList } from "@clerk/nextjs";
 
 export default function Home() {
   const { isLoaded, sessions} = useSessionList();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
-  }  
+  }
   return (
-    <div> 
-      <p>Welcome back. You've been here 
+    <div>
+      <p>Welcome back. You have been here
       {sessions.length} times before.
       </p>
     </div>
@@ -36,14 +36,14 @@ import { useSessionList } from "@clerk/clerk-react";
 
 export default function Home() {
   const { isLoaded, sessions} = useSessionList();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
-  }  
+  }
   return (
-    <div> 
-      <p>Welcome back. You've been here 
+    <div>
+      <p>Welcome back. You've been here
       {sessions.length} times before.
       </p>
     </div>
