--- a/src/pages/reference-react/internals/use-sign-in.mdx
+++ b/src/pages/reference-react/internals/use-sign-in.mdx
@@ -9,176 +9,179 @@ The `useSignIn` hook gives you access to the SignIn object, which allows you to 
 ## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
-#### Check the current sign in status
+  <Tab>
+    #### Check the current sign in status
 
-```tsx copy filename="pages/index.tsx"
-import { useSignIn } from "@clerk/nextjs";
+    ```tsx copy filename="pages/index.tsx"
+    import { useSignIn } from "@clerk/nextjs";
 
-export default function SignInStep() {
-  const { isLoaded, signIn } = useSignIn();
+    export default function SignInStep() {
+      const { isLoaded, signIn } = useSignIn();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  return <div>The current sign in attempt status is {signIn.status}.</div>;
-}
-```
+      return <div>The current sign in attempt status is {signIn.status}.</div>;
+    }
+    ```
 
-#### Sign in a user with a custom flow
+    #### Sign in a user with a custom flow
 
-```tsx copy filename="pages/signin.tsx"
-import { useSignIn } from "@clerk/nextjs";
-import { useState } from "react";
+    ```tsx copy filename="pages/signin.tsx"
+    import { useSignIn } from "@clerk/nextjs";
+    import { useState } from "react";
 
-export default function SignIn() {
-  const [email, setEmail] = useState("");
-  const [password, setPassword] = useState("");
+    export default function SignIn() {
+      const [email, setEmail] = useState("");
+      const [password, setPassword] = useState("");
 
-  const { isLoaded, signIn, setActive } = useSignIn();
+      const { isLoaded, signIn, setActive } = useSignIn();
 
-  if (!isLoaded) {
-    return null;
-  }
+      if (!isLoaded) {
+        return null;
+      }
 
-  async function submit(e) {
-    e.preventDefault();
-    await signIn
-      .create({
-        identifier: email,
-        password,
-      })
-      .then((result) => {
-        if (result.status === "complete") {
-          console.log(result);
-          setActive({ session: result.createdSessionId });
-        } else {
-          console.log(result);
-        }
-      })
-      .catch((err) => console.error("error", err.errors[0].longMessage));
-  }
+      async function submit(e) {
+        e.preventDefault();
+        await signIn
+          .create({
+            identifier: email,
+            password,
+          })
+          .then((result) => {
+            if (result.status === "complete") {
+              console.log(result);
+              setActive({ session: result.createdSessionId });
+            } else {
+              console.log(result);
+            }
+          })
+          .catch((err) => console.error("error", err.errors[0].longMessage));
+      }
 
-  return (
-    <form onSubmit={submit}>
-      <div>
-        <label htmlFor="email">Email</label>
-        <input
-          type="email"
-          value={email}
-          onChange={(e) => setEmail(e.target.value)}
-        />
-      </div>
-      <div>
-        <label htmlFor="password">Password</label>
-        <input
-          type="password"
-          value={password}
-          onChange={(e) => setPassword(e.target.value)}
-        />
-      </div>
-      <div>
-        <button>Sign in</button>
-      </div>
-    </form>
-  );
-}
-```
+      return (
+        <form onSubmit={submit}>
+          <div>
+            <label htmlFor="email">Email</label>
+            <input
+              type="email"
+              value={email}
+              onChange={(e) => setEmail(e.target.value)}
+            />
+          </div>
+          <div>
+            <label htmlFor="password">Password</label>
+            <input
+              type="password"
+              value={password}
+              onChange={(e) => setPassword(e.target.value)}
+            />
+          </div>
+          <div>
+            <button>Sign in</button>
+          </div>
+        </form>
+      );
+    }
+    ```
+  </Tab>
 
-</Tab>
-<Tab>
-#### Check the current sign in status
+  <Tab>
+    #### Check the current sign in status
 
-```tsx copy filename="pages/sign-in-step.tsx"
-import { useSignIn } from "@clerk/clerk-react";
+    ```tsx copy filename="pages/sign-in-step.tsx"
+    import { useSignIn } from "@clerk/clerk-react";
 
-export default function SignInStep() {
-  const { isLoaded, signIn } = useSignIn();
+    export default function SignInStep() {
+      const { isLoaded, signIn } = useSignIn();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  return <div>The current sign in attempt status is {signIn.status}.</div>;
-}
-```
+      return <div>The current sign in attempt status is {signIn.status}.</div>;
+    }
+    ```
 
-#### Sign in a user with a custom flow
+    #### Sign in a user with a custom flow
 
-```tsx copy filename="pages/signin.tsx"
-import { useSignIn } from "@clerk/clerk-react";
-import { useState } from "react";
+    ```tsx copy filename="pages/signin.tsx"
+    import { useSignIn } from "@clerk/clerk-react";
+    import { useState } from "react";
 
-export default function SignIn() {
-  const [email, setEmail] = useState("");
-  const [password, setPassword] = useState("");
+    export default function SignIn() {
+      const [email, setEmail] = useState("");
+      const [password, setPassword] = useState("");
 
-  const { isLoaded, signIn, setActive } = useSignIn();
+      const { isLoaded, signIn, setActive } = useSignIn();
 
-  if (!isLoaded) {
-    return null;
-  }
+      if (!isLoaded) {
+        return null;
+      }
 
-  async function submit(e) {
-    e.preventDefault();
-    await signIn
-      .create({
-        identifier: email,
-        password,
-      })
-      .then((result) => {
-        if (result.status === "complete") {
-          console.log(result);
-          setActive({ session: result.createdSessionId });
-        } else {
-          console.log(result);
-        }
-      })
-      .catch((err) => console.error("error", err.errors[0].longMessage));
-  }
+      async function submit(e) {
+        e.preventDefault();
+        await signIn
+          .create({
+            identifier: email,
+            password,
+          })
+          .then((result) => {
+            if (result.status === "complete") {
+              console.log(result);
+              setActive({ session: result.createdSessionId });
+            } else {
+              console.log(result);
+            }
+          })
+          .catch((err) => console.error("error", err.errors[0].longMessage));
+      }
 
-  return (
-    <form onSubmit={submit}>
-      <div>
-        <label htmlFor="email">Email</label>
-        <input
-          type="email"
-          value={email}
-          onChange={(e) => setEmail(e.target.value)}
-        />
-      </div>
-      <div>
-        <label htmlFor="password">Password</label>
-        <input
-          type="password"
-          value={password}
-          onChange={(e) => setPassword(e.target.value)}
-        />
-      </div>
-      <div>
-        <button>Sign in</button>
-      </div>
-    </form>
-  );
-}
-```
-
-</Tab>
+      return (
+        <form onSubmit={submit}>
+          <div>
+            <label htmlFor="email">Email</label>
+            <input
+              type="email"
+              value={email}
+              onChange={(e) => setEmail(e.target.value)}
+            />
+          </div>
+          <div>
+            <label htmlFor="password">Password</label>
+            <input
+              type="password"
+              value={password}
+              onChange={(e) => setPassword(e.target.value)}
+            />
+          </div>
+          <div>
+            <button>Sign in</button>
+          </div>
+        </form>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
-<Tables headings={["Variables", "Description"]} rows={[
-    {
-      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
-    },
-    {
-      cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
-    },
-    {
-      cells: ["setSession", "A function that sets the active session, this should"]
-    },
-    {
-      cells: ["signIn", "An object that contains the current sign in attempt status and methods to create a new sign in attempt."]
-    },
-  ]} />
+
+<Tables
+  headings={["Variables", "Description"]}
+  rows={[
+  {
+  cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
+  },
+  {
+  cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
+  },
+  {
+  cells: ["setSession", "A function that sets the active session, this should"]
+  },
+  {
+  cells: ["signIn", "An object that contains the current sign in attempt status and methods to create a new sign in attempt."]
+  },
+  ]}
+/>
