--- a/src/pages/reference-react/internals/use-sign-up.mdx
+++ b/src/pages/reference-react/internals/use-sign-up.mdx
@@ -9,182 +9,185 @@ The `useSignUp` hook gives you access to the SignUp object, which allows you to 
 ## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
-#### Check the current sign up status
+  <Tab>
+    #### Check the current sign up status
 
-```tsx copy filename="pages/sign-up.tsx"
-import { useSignUp } from "@clerk/nextjs";
+    ```tsx copy filename="pages/sign-up.tsx"
+    import { useSignUp } from "@clerk/nextjs";
 
-export default function SignUpStep() {
-  const { isLoaded, signUp } = useSignUp();
+    export default function SignUpStep() {
+      const { isLoaded, signUp } = useSignUp();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  return <div>The current sign up attempt status is {signUp.status}.</div>;
-}
-```
+      return <div>The current sign up attempt status is {signUp.status}.</div>;
+    }
+    ```
 
-#### Sign up a user with a custom flow
+    #### Sign up a user with a custom flow
 
-```tsx copy filename="pages/signup.tsx"
-import { useSignUp } from "@clerk/nextjs";
-import { useState } from "react";
+    ```tsx copy filename="pages/signup.tsx"
+    import { useSignUp } from "@clerk/nextjs";
+    import { useState } from "react";
 
-export default function SignUp() {
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
+    export default function SignUp() {
+      const [emailAddress, setEmailAddress] = useState("");
+      const [password, setPassword] = useState("");
 
-  const { isLoaded, signUp, setActive } = useSignUp();
+      const { isLoaded, signUp, setActive } = useSignUp();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  async function submit(e) {
-    e.preventDefault();
-    // Check the sign up response to
-    // decide what to do next.
-    await signUp
-      .create({
-        emailAddress,
-        password,
-      })
-      .then((result) => {
-        if (result.status === "complete") {
-          console.log(result);
-          setActive({ session: result.createdSessionId });
-        } else {
-          console.log(result);
-        }
-      })
-      .catch((err) => console.error("error", err.errors[0].longMessage));
-  }
+      async function submit(e) {
+        e.preventDefault();
+        // Check the sign up response to
+        // decide what to do next.
+        await signUp
+          .create({
+            emailAddress,
+            password,
+          })
+          .then((result) => {
+            if (result.status === "complete") {
+              console.log(result);
+              setActive({ session: result.createdSessionId });
+            } else {
+              console.log(result);
+            }
+          })
+          .catch((err) => console.error("error", err.errors[0].longMessage));
+      }
 
-  return (
-    <form onSubmit={submit}>
-      <div>
-        <label htmlFor="email">Email</label>
-        <input
-          type="email"
-          value={emailAddress}
-          onChange={(e) => setEmailAddress(e.target.value)}
-        />
-      </div>
-      <div>
-        <label htmlFor="password">Password</label>
-        <input
-          type="password"
-          value={password}
-          onChange={(e) => setPassword(e.target.value)}
-        />
-      </div>
-      <div>
-        <button>Sign up</button>
-      </div>
-    </form>
-  );
-}
-```
+      return (
+        <form onSubmit={submit}>
+          <div>
+            <label htmlFor="email">Email</label>
+            <input
+              type="email"
+              value={emailAddress}
+              onChange={(e) => setEmailAddress(e.target.value)}
+            />
+          </div>
+          <div>
+            <label htmlFor="password">Password</label>
+            <input
+              type="password"
+              value={password}
+              onChange={(e) => setPassword(e.target.value)}
+            />
+          </div>
+          <div>
+            <button>Sign up</button>
+          </div>
+        </form>
+      );
+    }
+    ```
+  </Tab>
 
-</Tab>
-<Tab>
-#### Check the current sign up status
+  <Tab>
+    #### Check the current sign up status
 
-```tsx copy filename="sign-up-step.tsx"
-import { useSignUp } from "@clerk/clerk-react";
+    ```tsx copy filename="sign-up-step.tsx"
+    import { useSignUp } from "@clerk/clerk-react";
 
-export default function SignUpStep() {
-  const { isLoaded, signUp } = useSignUp();
+    export default function SignUpStep() {
+      const { isLoaded, signUp } = useSignUp();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  return <div>The current sign up attempt status is {signUp.status}.</div>;
-}
-```
+      return <div>The current sign up attempt status is {signUp.status}.</div>;
+    }
+    ```
 
-#### Sign up a user with a custom flow
+    #### Sign up a user with a custom flow
 
-```tsx copy filename="signup.tsx"
-import { useSignUp } from "@clerk/clerk-react";
-import { useState } from "react";
+    ```tsx copy filename="signup.tsx"
+    import { useSignUp } from "@clerk/clerk-react";
+    import { useState } from "react";
 
-export default function SignUp() {
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
+    export default function SignUp() {
+      const [emailAddress, setEmailAddress] = useState("");
+      const [password, setPassword] = useState("");
 
-  const { isLoaded, signUp, setActive } = useSignUp();
+      const { isLoaded, signUp, setActive } = useSignUp();
 
-  if (!isLoaded) {
-    // handle loading state
-    return null;
-  }
+      if (!isLoaded) {
+        // handle loading state
+        return null;
+      }
 
-  async function submit(e) {
-    e.preventDefault();
-    // Check the sign up response to
-    // decide what to do next.
-    await signUp
-      .create({
-        emailAddress,
-        password,
-      })
-      .then((result) => {
-        if (result.status === "complete") {
-          console.log(result);
-          setActive({ session: result.createdSessionId });
-        } else {
-          console.log(result);
-        }
-      })
-      .catch((err) => console.error("error", err.errors[0].longMessage));
-  }
+      async function submit(e) {
+        e.preventDefault();
+        // Check the sign up response to
+        // decide what to do next.
+        await signUp
+          .create({
+            emailAddress,
+            password,
+          })
+          .then((result) => {
+            if (result.status === "complete") {
+              console.log(result);
+              setActive({ session: result.createdSessionId });
+            } else {
+              console.log(result);
+            }
+          })
+          .catch((err) => console.error("error", err.errors[0].longMessage));
+      }
 
-  return (
-    <form onSubmit={submit}>
-      <div>
-        <label htmlFor="email">Email</label>
-        <input
-          type="email"
-          value={emailAddress}
-          onChange={(e) => setEmailAddress(e.target.value)}
-        />
-      </div>
-      <div>
-        <label htmlFor="password">Password</label>
-        <input
-          type="password"
-          value={password}
-          onChange={(e) => setPassword(e.target.value)}
-        />
-      </div>
-      <div>
-        <button>Sign up</button>
-      </div>
-    </form>
-  );
-}
-```
-
-</Tab>
+      return (
+        <form onSubmit={submit}>
+          <div>
+            <label htmlFor="email">Email</label>
+            <input
+              type="email"
+              value={emailAddress}
+              onChange={(e) => setEmailAddress(e.target.value)}
+            />
+          </div>
+          <div>
+            <label htmlFor="password">Password</label>
+            <input
+              type="password"
+              value={password}
+              onChange={(e) => setPassword(e.target.value)}
+            />
+          </div>
+          <div>
+            <button>Sign up</button>
+          </div>
+        </form>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
-<Tables headings={["Variables", "Description"]} rows={[
-    {
-      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
-    },
-    {
-      cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
-    },
-    {
-      cells: ["setSession", "A function that sets the active session, this should"]
-    },
-    {
-      cells: ["signUp", "An object that contains the current sign up attempt status and methods to create a new sign up attempt."]
-    },
-  ]} />
+
+<Tables
+  headings={["Variables", "Description"]}
+  rows={[
+  {
+  cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
+  },
+  {
+  cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
+  },
+  {
+  cells: ["setSession", "A function that sets the active session, this should"]
+  },
+  {
+  cells: ["signUp", "An object that contains the current sign up attempt status and methods to create a new sign up attempt."]
+  },
+  ]}
+/>
