--- a/src/pages/reference-react/user-management/signed-in.mdx
+++ b/src/pages/reference-react/user-management/signed-in.mdx
@@ -9,7 +9,7 @@ The `<SignedIn/>` component offers authentication checks as a cross-cutting conc
 ## Usage
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import "@/styles/globals.css";
 import {
   ClerkProvider,
@@ -34,7 +34,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -82,7 +82,7 @@ export default function Index() {
 
 Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedIn/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
 import {
   ClerkProvider,
