--- a/src/pages/reference-react/user-management/signed-out.mdx
+++ b/src/pages/reference-react/user-management/signed-out.mdx
@@ -8,7 +8,7 @@ The `<SignedOut/>` component offers authentication checks as a cross-cutting con
 ## Usage
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import "@/styles/globals.css";
 import {
   ClerkProvider,
@@ -32,7 +32,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { SignedOut, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -57,7 +57,7 @@ function Page() {
 
 Below is an example of how to use `<SignedOut/>` with React Router. The `<SignedOut/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
-```jsx copy filename="app.tsx"
+```tsx copy filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
 import {
   ClerkProvider,
